src/objects/Affl_Mappings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Affl Mappings</label>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <description>The label of the Account record type that&apos;s being mapped.</description>
        <inlineHelpText>The label of the Account record type that&apos;s being mapped.</inlineHelpText>
        <label>Account Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Program_Enrollment_Role__c</fullName>
        <description>The role to set on the Program Enrollment record that&apos;s automatically created if Auto Program Enrollment is selected.</description>
        <inlineHelpText>The role to set on the Program Enrollment record that&apos;s automatically created if Auto Program Enrollment is selected.</inlineHelpText>
        <label>Auto Enrollment Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Program_Enrollment_Status__c</fullName>
        <description>The status to set on the Program Enrollment record that&apos;s automatically created if Auto Program Enrollment is selected.</description>
        <inlineHelpText>The status to set on the Program Enrollment record that&apos;s automatically created if Auto Program Enrollment is selected.</inlineHelpText>
        <label>Auto Enrollment Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Program_Enrollment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected, a Program Enrollment record is auto created when a user creates an Affiliation record with an Account of this record type.</description>
        <inlineHelpText>If selected, a Program Enrollment record is auto created when a user creates an Affiliation record with an Account of this record type.</inlineHelpText>
        <label>Auto Enrollment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Affl_Field__c</fullName>
        <description>The label of the Contact field that holds the value of the primary Account for this record type.</description>
        <inlineHelpText>The label of the Contact field that holds the value of the primary Account for this record type.</inlineHelpText>
        <label>Primary Affl Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>